--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,20 @@
   --specialColor: #c32e06;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
 }
 
