--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,14 @@ body {
   font-family: 'Sansita Swashed', cursive;
 }
 
+.slick-list {
+  overflow: visible !important;
+}
+
+.slick-slide > div {
+  overflow: visible !important;
+}
+
 /* Remove padding from MUI Container */
 .css-1u606s6-MuiContainer-root,
 .MuiContainer-root {
