--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@100..900&family=Sansita+Swashed:wght@300..900&display=swap');
 :root {
   --themeColor: #5F2930;
   --specialColor: #c32e06;
-  --fontFamily: "Roboto","Sansita Swashed","Arial",sans-serif;
+  /* Heading font (for hero etc.) */
+  --fontFamily: 'Playfair Display', serif;
+}
+/* Sansita Swashed */
+.sansita-swashed {
+  font-family: "Sansita Swashed", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 600; /* 300–900 */
+  font-style: normal;
+}
+
+/* Bitcount Single */
+.bitcount-single {
+  font-family: "Bitcount Single", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 500; /* 100–900 */
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0,
+    "CRSV" 0.5,
+    "ELSH" 0,
+    "ELXP" 0;
 }
 
 * {
@@ -25,10 +45,41 @@ body {
   overflow-x: hidden;
   width: 100%;
   position: relative;
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.5;
+  color: #222;
 }
 
+/* Global typography */
+h1, h2, h3, h4, h5, h6,
+.MuiTypography-h1,
+.MuiTypography-h2,
+.MuiTypography-h3,
+.MuiTypography-h4,
+.MuiTypography-h5,
+.MuiTypography-h6 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
+}
+
+p,
+span,
+.MuiTypography-root,
+.MuiTypography-body1,
+.MuiTypography-body2 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+}
+
+.MuiButton-root {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+/* Section title utility */
 .title-style {
-  font-family: 'Sansita Swashed', cursive;
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
 }
 
 .slick-list {
