--- a/src/components/home/HeroBanner.css
+++ b/src/components/home/HeroBanner.css
@@ -43,19 +43,18 @@
   border-radius: 0;
 }
 
+/* Only 2 small images visible on the right */
 .slide .item:nth-child(3) {
-  left: calc(100% - 920px);
-}
-.slide .item:nth-child(4) {
   left: calc(100% - 616px);
 }
-.slide .item:nth-child(5) {
+.slide .item:nth-child(4) {
   left: calc(100% - 312px);
 }
-
+.slide .item:nth-child(5),
 .slide .item:nth-child(n + 6) {
   left: calc(100% - 8px);
   opacity: 0;
+  pointer-events: none;
 }
 
 .item .content {
