--- a/src/components/home/HeroBanner.css
+++ b/src/components/home/HeroBanner.css
@@ -84,6 +84,7 @@
   z-index: 1;
 }
 
+
 .slide .item:nth-child(2) .content {
   display: block;
 }
@@ -108,8 +109,8 @@
   border: none;
   cursor: pointer;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.7);
-  color: #fff;
+  background: #fbc7b5;
+  color: #000;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   animation: animate 1s ease-in-out 0.6s forwards;
 }
@@ -140,7 +141,7 @@
   width: 40px;
   height: 35px;
   border-radius: 8px;
-  border: 2px solid #000;
+  border: 2px solid black;
   cursor: pointer;
-  background: rgba(255, 255, 255, 0.6);
+  background: #fbc7b5;
 }
