--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bitcount+Single:wght@100..900&family=Sansita+Swashed:wght@300..900&display=swap');
+/* Fonts loaded from index.html to avoid blocking @import */
 :root {
   --themeColor: #5F2930;
   --specialColor: #c32e06;
@@ -10,21 +9,8 @@
 .sansita-swashed {
   font-family: "Sansita Swashed", system-ui;
   font-optical-sizing: auto;
-  font-weight: 600; /* 300–900 */
+  font-weight: 600;
   font-style: normal;
-}
-
-/* Bitcount Single */
-.bitcount-single {
-  font-family: "Bitcount Single", system-ui;
-  font-optical-sizing: auto;
-  font-weight: 500; /* 100–900 */
-  font-style: normal;
-  font-variation-settings:
-    "slnt" 0,
-    "CRSV" 0.5,
-    "ELSH" 0,
-    "ELXP" 0;
 }
 
 * {
@@ -87,6 +73,21 @@ span,
 /* Link without underline */
 .link-no-decoration {
   text-decoration: none;
+}
+
+/* Minimal container utilities (replaces Bootstrap for layout only) */
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.container-fluid {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .slick-list {
