--- a/src/index.css
+++ b/src/index.css
@@ -136,10 +136,10 @@ span,
   }
 }
 
-/* Desktop/Laptop view - padding-top: 30px */
+/* Desktop/Laptop/Small laptop - keep 111px so content does not go under fixed navbar */
 @media (min-width: 1200px) {
   .css-awq9fn {
-      padding-top: 30px !important;
+      padding-top: 111px !important;
   }
 }
 
